# motiv

./: .gitignore  Cargo.toml  Makefile  README.md  motiv.toml
.github/workflows/: rust.yml
backend/: Cargo.toml  motiv.toml  motiv.toml.example  rustfmt.toml
backend/migrations/2020-07-16-212437_create_media/: up.sql
backend/src/: config.rs  endpoints.rs  lib.rs  main.rs  schema.rs
backend/src/api/: context.rs  graphql.rs  mod.rs
backend/src/data/: data.rs  db.rs  graphql.rs  mod.rs  todo.rs
backend/src/models/: media.rs  mod.rs
backend/src/services/: image_cacher.rs  indexer.rs  mod.rs  thumbnailer.rs  worker.rs
docker/: Dockerfile  fetch-dummy-gifs.sh  fetch-dummy-pictures.sh  fetch-dummy-videos.sh
dx/docker/: Dockerfile  docker-compose.demo.yml  docker-compose.yml
dx/scripts/: fetch-dummy-gifs.sh  fetch-dummy-videos.sh
frontend/: .eslintrc.js  .gitignore  .pnp.cjs  codegen.yml  graphql-schema.json  graphql.schema.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/react/: .eslintrc.js  .gitignore  codegen.yml  graphql.schema.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/react/public/: index.html
frontend/react/src/: index.tsx  react-app-env.d.ts  serviceWorker.tsx
frontend/react/src/main/: App.test.tsx  App.tsx  NavFrame.tsx
frontend/react/src/theme/: default.ts
frontend/scripts/: regenerate-graphql-types.sh
frontend/solidjs/: .eslintrc.js  codegen.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/solidjs/src/: App.tsx  index.tsx
frontend/src/: App.js  index.css  index.js  index.tsx  react-app-env.d.ts  serviceWorker.tsx
frontend/src/components/: Thumbnail.js  Thumbnail.tsx
frontend/src/main/: App.js  App.test.js  App.test.tsx  App.tsx  Drawer.js  Drawer.tsx  NavFrame.tsx
frontend/src/pages/: Albums.tsx  Favorites.js  Feed.js  Feed.tsx  Tags.js
frontend/src/queries/: allMediaQuery.ts
frontend/src/theme/: default.js  default.ts
frontend/src/types/: graphql-global-types.ts  mediaType.ts
frontend/yew/: Cargo.toml  index.html
migrations/2020-07-16-212437_create_media/: down.sql  up.sql
src/: config.rs  data.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  media.rs  schema.rs  scraper.rs
src/data/: data.rs  graphql.rs  mod.rs
src/models/: media.rs  todo.rs
src/services/: indexer.rs  mod.rs  thumbnailer.rs  worker.rs
(+33 files in other folders)
