[package]
name = "bild"
version = "0.1.0"
authors = ["Alexander Lindberg <alexanderlndbrg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
juniper = "0.14"
juniper_rocket = "0.5"
toml = "0.5.6"
serde = "1.0.114"
glob = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve"]
