[package]
name = "motiv"
version = "0.1.0"
authors = ["Alexander Lindberg <alexanderlndbrg@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.7.1"
juniper = "0.14.2"
r2d2 = "0.8.8"
serde = "1.0"
serde_json = "1.0.44"
actix-files = "0.2.0"
futures = "=0.3.2"
futures-util = "=0.3.2"
futures-macro = "=0.3.2"
toml = "0.5"
kamadak-exif = "0.5.1"
glob = "0.3.0"



