[package]
name = "motiv"
version = "0.1.0"
authors = ["Alexander Lindberg <alexanderlndbrg@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
log = "0.4.11"
libwebp-sys = "0.3"
env_logger = "0.7.1"
juniper = "0.14.2"
r2d2 = "0.8.9"
rayon = "1.5.0"
serde = "1.0.115"
serde_json = "1.0.57"
actix-files = "0.2.2"
futures = "0.3.5"
futures-util = "0.3.5"
futures-macro = "0.3.5"
toml = "0.5.6"
kamadak-exif = "0.5.2"
glob = "0.3.0"
bytes = "0.5.6"
actix-utils = "2.0.0"
image = "0.23.9"
blake2 = "0.9.0"



