[package]
name = "motiv"
version = "0.1.0"
authors = ["Alexander Lindberg <alexanderlndbrg@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.5"
actix-rt = "1"
actix-web = "3"
actix-files = "0.5"
actix-utils = "3"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
log = "0.4"
libwebp-sys = "0.4"
env_logger = "0.7.1"
juniper = "0.14"
r2d2 = "0.8.9"
rayon = "1.5.0"
serde = "1"
serde_json = "1.0.57"
futures = "0.3.5"
futures-util = "0.3.5"
futures-macro = "0.3.5"
toml = "0.5.6"
kamadak-exif = "0.5.2"
glob = "0.3.0"
bytes = "0.5.6"
image = "0.23.9"
blake2 = "0.9.0"
thiserror = "1.0.24"
